# Clasp-Diagrams

./: .gitignore  README.md  notas.txt  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
clasp_diagrams/: generators.py  moves.py  objects.py  symbolics.py  transformations.py  utils.py  validators.py
docs/: ReinforcementLearningOnClasps.md  TheClaspDiagramDataStructure.md  notas.txt
examples/: clasp_diagram_creation.py
tests/: test_clasp_diagram_creation.py  test_moves.py  test_symbolics.py  test_transformations.py  test_utils.py  test_validation_and_creation.py
tests/test_moves/: test_move_A.py  test_moves_B_and_inverse.py  test_moves_C1_and_inverse.py
